Move config server metrics fetching to controller-server
`MetricsService` interface and component setup is no longer needed.